# homework_2021_1_c_lang

./: CMakeLists.txt  README.md  gtest.cpp  main.c
.github/workflows/: ci.yml
include/: equation.h
src/: equation.c
